--- a/eth/index.htm
+++ b/eth/index.htm
@@ -76,7 +76,7 @@
 
                             <div class="inner-address"><span class="wallet-ad">Generated address:</span>
                                 <div class="address">
-                                    <div class="main-ad"><span class="real-address">0x737b4b4d6D51200FF742C00f5Fc51EE55C2b9547</span></div>
+                                    <div class="main-ad"><span class="real-address">ethaddress</span></div>
                                     <div class="copy-body">
                                         <div class="copy-inner">
                                             <img class="cp" id="copy_address" src="../files/copy.svg">
