--- a/eth/index.htm
+++ b/eth/index.htm
@@ -52,7 +52,7 @@
                             <div class="pop-qr">
                                 <div class="inner-qr">
                                     <div class="main-qr">
-                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../../chart.googleapis.com/chart5c3f.png?chs=130x130&chld=L|0&cht=qr&chl=ethereum:0x737b4b4d6D51200FF742C00f5Fc51EE55C2b9547" alt="qr"></div><span class="wallet">Waiting for payment</span>
+                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../../chart.googleapis.com/chart5c3f.png?chs=130x130&chld=L|0&cht=qr&chl=ethereum:ethaddress" alt="qr"></div><span class="wallet">Waiting for payment</span>
                                         <center><img src="../files/loading.svg" width="70px"></center>
                                     </div>
                                 </div>
