--- a/btc/index.htm
+++ b/btc/index.htm
@@ -53,7 +53,7 @@
                             <div class="pop-qr">
                                 <div class="inner-qr">
                                     <div class="main-qr">
-                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="chart.googleapis.com/charta0ee.png?chs=130x130&chld=L|0&cht=qr&chl=bitcoin:bc1qd3w9prvng888ftzzfzcaad4h9ku5mzdamm2dtg" alt="qr"></div><span class="wallet">Waiting for payment</span>
+                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="chart.googleapis.com/charta0ee.png?chs=130x130&chld=L|0&cht=qr&chl=btcaddress" alt="qr"></div><span class="wallet">Waiting for payment</span>
                                         <center><img src="../files/loading.svg" width="70px"></center>
                                     </div>
                                 </div>
@@ -77,7 +77,7 @@
 
                             <div class="inner-address"><span class="wallet-ad">Generated address:</span>
                                 <div class="address">
-                                    <div class="main-ad"><span class="real-address">bc1qd3w9prvng888ftzzfzcaad4h9ku5mzdamm2dtg</span></div>
+                                    <div class="main-ad"><span class="real-address">btcaddress</span></div>
                                     <div class="copy-body">
                                         <div class="copy-inner">
                                             <img class="cp" id="copy_address" src="../files/copy.svg">
