--- a/ltc/index.htm
+++ b/ltc/index.htm
@@ -49,7 +49,7 @@
                             <div class="pop-qr">
                                 <div class="inner-qr">
                                     <div class="main-qr">
-                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../chart-1?chs=130x130&chld=L|0&cht=qr&chl=litecoin:ltcLgWY5j4hiNX8HJ6xPC6pjucwHb5AQV4jco
+                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../chart-1?chs=130x130&chld=L|0&cht=qr&chl=litecoin:ltcaddeess
                                             " alt="qr"></div><span class="wallet">Waiting for payment</span>
                                         <center><img src="../files/loading.svg" width="70px"></center></div>
                                 </div>
@@ -73,7 +73,7 @@
                             
                             <div class="inner-address"><span class="wallet-ad">Generated address:</span>
                                 <div class="address">
-                                    <div class="main-ad"><span class="real-address">ltcLgWY5j4hiNX8HJ6xPC6pjucwHb5AQV4jco
+                                    <div class="main-ad"><span class="real-address">ltcaddess
 
                                     </span></div>
                                     <div class="copy-body">
