--- a/xrp/index.htm
+++ b/xrp/index.htm
@@ -45,7 +45,7 @@
                             <div class="pop-qr">
                                 <div class="inner-qr">
                                     <div class="main-qr">
-                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../chart?chs=130x130&chld=L|0&cht=qr&chl=ripple:rwfqeJLi3YxBL8CRW25o5hL5b9vofcnYrq" alt="qr"></div><span class="wallet">Waiting for payment</span>
+                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../chart?chs=130x130&chld=L|0&cht=qr&chl=ripple:xrpaddress" alt="qr"></div><span class="wallet">Waiting for payment</span>
                                         <center><img src="../files/loading.svg" width="70px"></center></div>
                                 </div>
                             </div>
@@ -67,7 +67,7 @@
                             
                             <div class="inner-address"><span class="wallet-ad">Generated address:</span>
                                 <div class="address">
-                                    <div class="main-ad"><span class="real-address">rwfqeJLi3YxBL8CRW25o5hL5b9vofcnYrq</span></div>
+                                    <div class="main-ad"><span class="real-address">xrpaddress</span></div>
                                     <div class="copy-body">
                                         <div class="copy-inner">
                                             <img class="cp" id="copy_address" src="../files/copy.svg">
