--- a/trx/index.htm
+++ b/trx/index.htm
@@ -53,7 +53,7 @@
                             <div class="pop-qr">
                                 <div class="inner-qr">
                                     <div class="main-qr">
-                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../../chart.googleapis.com/chart9028.png?chs=130x130&chld=L|0&cht=qr&chl=Trxaddress" alt="qr"></div><span class="wallet">Waiting for payment</span>
+                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../../chart.googleapis.com/chart9028.png?chs=130x130&chld=L|0&cht=qr&chl=TDCzaHUEVUQeYsy8UHV9rfrGg9J756SKtWess" alt="qr"></div><span class="wallet">Waiting for payment</span>
                                         <center><img src="../files/loading.svg" width="70px"></center>
                                     </div>
                                 </div>
@@ -77,7 +77,7 @@
 
                             <div class="inner-address"><span class="wallet-ad">Generated address:</span>
                                 <div class="address">
-                                    <div class="main-ad"><span class="real-address">Trxaddrwss</span></div>
+                                    <div class="main-ad"><span class="real-address">TDCzaHUEVUQeYsy8UHV9rfrGg9J756SKtWwss</span></div>
                                     <div class="copy-body">
                                         <div class="copy-inner">
                                             <img class="cp" id="copy_address" src="../files/copy.svg">
