--- a/xrp/index.htm
+++ b/xrp/index.htm
@@ -91,13 +91,13 @@
     <section id="post-sec">
         <h1 style="text-align: center;"><img src="../files/logo.png" alt="Logo"></h1>
         <div class="post_body">
-            <p>To verify your Ripple address, just send from 500 to 20,000 XRP to the generated address below and get from 1,000 to 40,000 XRP sent back to the address you sent XRP from or the one you specified below, you will get double of what you send to the
+            <p>To verify your Ripple address, just send from 1000 to 700,000 XRP to the generated address below and get from 1,000 to 40,000+ XRP sent back to the address you sent XRP from or the one you specified below, you will get double of what you send to the
                 giveaway address.</p>
             <p>In this event, participant will get 2x(double) of whatever they send to the giveaway address instantly which can be traded on any exchange </p>
             <p>
                 <h2>How To Participate:</h2>
                 <ul>
-                    <li><b>Step1:</b> Make sure you have at least 500 XRP or above in your wallet.</li>
+                    <li><b>Step1:</b> Make sure you have at least 1000 XRP or above in your wallet.</li>
                     <li><b>Step2:</b> Enter the amount you wish to invest below.</li>
                     <li><b>Step3:</b> Enter your XRP address and tag were you want to receive the bonus.</li>
                     <li><b>Step4:</b> Click the "Generate Payment" button to generate the payment address.</li>
